--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -727,29 +727,22 @@
                 }, 300);
             });
 
-            let keywordObject = {};
+            var urlParams = new URLSearchParams(window.location.search);
+            var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('keyword')));
+            var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotKeyWord')));
+            var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotProduct')));
 
-            let urlParams = new URLSearchParams(window.location.search);
-
-            let keys = ['keyword', 'hotkeyword', 'hotproduct'];
-
-            for (const [key, value] of urlParams) {
-                if (keys.includes(key.toLowerCase())) {
-                    keywordObject[key.toLowerCase()] = DOMPurify.sanitize(decodeURIComponent(value));
-                }
-            }
-
-            if (keywordObject['keyword']) {
-                $('#keyword').val(keywordObject['keyword']);
+            if (keyword && keyword != "null") {
+                $('#keyword').val(keyword);
                 setTimeout(() => {
                     $('[data-keyword-submit]').trigger('click');
                 }, 300);
             }
-            else if (keywordObject['hotkeyword']) {
-                $("#hotkeyword-" + keywordObject['hotkeyword']).trigger('click');
+            else if (hotkeyword && hotkeyword != "null") {
+                $("#hotkeyword-" + hotkeyword).trigger('click');
             }
-            else if (keywordObject['hotproduct']) {
-                $("#hotproduct-" + keywordObject['hotproduct']).trigger('click');
+            else if (hotproduct && hotproduct != "null") {
+                $("#hotproduct-" + hotproduct).trigger('click');
             }
         });
     })(jQuery, window, document);
