--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -209,7 +209,7 @@
                         @foreach (var tag in Model.CategoryTags)
                         {
                             <li class="l-divideList__item l-divideList__item--auto">
-                                <a href="@(Model.SearchPageLink)?hotproduct=@(tag)" class="o-hashTag u-nowrap">#@tag</a>
+                                <a href="@(Model.SearchPageLink)?HotProduct=@(tag)" class="o-hashTag u-nowrap">#@tag</a>
                             </li>
                         }
                     </ul>
