--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
@@ -56,20 +56,11 @@
 
             function checkKeywordQueryString() {
 
-                let keywordObject = {};
+                var urlParams = new URLSearchParams(window.location.search);
+                var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('keyword')));
 
-                let urlParams = new URLSearchParams(window.location.search);
-
-                let keys = ['keyword', 'hotkeyword', 'hotproduct'];
-
-                for (const [key, value] of urlParams) {
-                    if (keys.includes(key.toLowerCase())) {
-                        keywordObject[key.toLowerCase()] = DOMPurify.sanitize(decodeURIComponent(value));
-                    }
-                }
-
-                if (keywordObject['keyword']) {
-                    $('[data-keyword-input]').val(keywordObject['keyword']);
+                if (keyword && keyword != "null") {
+                    $('[data-keyword-input]').val(keyword);
                     $('[data-keyword-submit]').trigger('click');
                 }
             }
