--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
@@ -85,7 +85,7 @@
                     </td>
                     <td class="c-cardTable__body u-left">
                         <div class="c-cardTable__content u-line-2@lt-only">
-                            <a href="<%= InfoLink %>" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt"><%= InfoContent %></a>
+                            <a href="<%= InfoLink %>" target="_blank" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt"><%= InfoContent %></a>
                         </div>
                     </td>
                     <td class="c-cardTable__space"></td>
