Update：基金詳細頁持股長條圖文字顏色- 修改 HTML 色碼，因長條圖如果太長目前顏色的數值於柱狀內會看不見

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -3551,7 +3551,7 @@
                             enabled: true,
                             useHTML: true,
                             formatter: function () {
-                                return '<div style="color:#6e6e6e; font-weight: 400;">' + this.point.y + '%</div>';
+                                return '<div style="color:#222; font-weight: 400;">' + this.point.y + '%</div>';
                             }
                         }],
                         states: {
