移除 key 關鍵字參數

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -432,7 +432,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1385,7 +1385,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1707,7 +1707,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1808,7 +1808,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2373,7 +2373,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2485,7 +2485,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2548,7 +2548,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
