--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -437,7 +437,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1388,7 +1388,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1760,7 +1760,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1857,7 +1857,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2428,7 +2428,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2539,7 +2539,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2602,7 +2602,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="@(searchUrl + "?HotProduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
+                                    <a href="@(searchUrl + "?hotproduct=" + item)" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
