--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
@@ -934,7 +934,7 @@
                     @foreach (string topic in Model.StructuredProduct.TopicTags)
                     {
                         <li class="l-divideList__item l-divideList__item--auto">
-                            <a href="@Model.StructuredProductSearchUrl?HotProduct=@topic" class="o-hashTag u-nowrap">#@topic</a>
+                            <a href="@Model.StructuredProductSearchUrl?hotproduct=@topic" class="o-hashTag u-nowrap">#@topic</a>
                         </li>
                     }
                 </ul>
