--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -724,9 +724,9 @@
             });
 
             var urlParams = new URLSearchParams(window.location.search);
-            var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('keyword')));
-            var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotKeyWord')));
-            var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotProduct')));
+            var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('word')));
+            var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotword')));
+            var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotproduct')));
 
             if (keyword && keyword != "null") {
                 $('#keyword').val(keyword);
