--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStockDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStockDetail.cshtml
@@ -167,7 +167,7 @@
                         @foreach (var tag in Model.USStock.HotProductTags)
                         {
                             <li class="l-divideList__item l-divideList__item--auto">
-                                <a href="@(Model.SearchUrl + "?HotProduct=" + tag)" class="o-hashTag u-nowrap">#@tag</a>
+                                <a href="@(Model.SearchUrl + "?hotproduct=" + tag)" class="o-hashTag u-nowrap">#@tag</a>
                             </li>
                         }
                     </ul>
