--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -87,9 +87,9 @@
 
             function checkKeywordQueryString() {
                 var urlParams = new URLSearchParams(window.location.search);
-                var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('keyword')));
-                var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotKeyWord')));
-                var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotProduct')));
+                var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('word')));
+                var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotword')));
+                var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotproduct')));
 
                 function queryKeyword(key) {
                     if (key && key != "null") {
