--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -1773,9 +1773,9 @@
 
         function QueryStringSearch() {
             var urlParams = new URLSearchParams(window.location.search);
-            var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('keyword')));
-            var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotKeyWord')));
-            var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('HotProduct')));
+            var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('word')));
+            var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotword')));
+            var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotproduct')));
 
             if (hotkeyword && hotkeyword != "null") {
                 $("#hotkey_criteria input[type='checkbox']").each(function () {
