--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
@@ -128,7 +128,7 @@
                 insertKeywords();
 
                 let option = SC_DATA.KeywordSearch_Option;
-                redirect(option.data('advance-url') + '?keyword=' + DOMPurify.sanitize(input.value));
+                redirect(option.data('advance-url') + '?word=' + DOMPurify.sanitize(input.value));
             }
 
             function redirect(url) {
