--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -92,7 +92,7 @@
             let self = $("input[insertKeywords]");
             let isSeachBar = self.attr("issearchbar");
             let urlParams = new URLSearchParams(window.location.search);
-            let keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('keyword')));
+            let keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('word')));
             let params;
 
             if (isSeachBar == "true") {
@@ -110,7 +110,7 @@
                 else {
                     params = {
                         pageId: self.attr("eh-search-pageid"),
-                        keyword: self.val().trim(),
+                        word: self.val().trim(),
                         productType: self.attr('eh-search-type')
                     };
                 }
