Fix：近5年績效差額

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
@@ -643,7 +643,7 @@
                                         <td>差額</td>
                                         @foreach (var item in Model.ETFNetWorthAnnunalReturn)
                                         {
-                                            <td><span>@item.Difference</span></td>
+                                            <td @item.DifferenceStyle><span>@item.Difference</span></td>
                                         }
                                     </tr>
                                 </tbody>
