--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/_Carousel.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/_Carousel.cshtml
@@ -1,79 +1,56 @@
-﻿@using Feature.Wealth.Component.Models.TabCards
-@model Feature.Wealth.Component.Models.TabCards.TabCardsModel
+﻿@model Feature.Wealth.Component.Models.TabCards.TabCardsModel
 
 <div class="l-trend__slider">
-	<!-- .u-shadow-animation: hover時陰影特效 -->
-	<div class="swiper c-swiper c-swiper--trend u-shadow-animation" data-carousel="true">
-		<div class="swiper-wrapper c-swiper__wrapper">
-			@if (!string.IsNullOrEmpty(Model.BannerLink1) || !string.IsNullOrEmpty(Model.ImageUrl1) || !string.IsNullOrEmpty(Model.Title1) || !string.IsNullOrEmpty(Model.Description1))
-			{
-				<div class="swiper-slide c-swiper__slide">
-					<a href="@Model.BannerLink1" class="c-banner c-banner--trend c-banner--zoom">
-
-						<img src="@Model.ImageUrl1" class="c-banner__img" loading="lazy" alt="">
-
-						@{
-							var fontcolor1 = Model.IsBlackFont1 == true ? null : "c-banner__content--wt";
-						}
-
-						<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
-
-						<div class="c-banner__content @fontcolor1">
-							<h3 class="c-banner__title">@Model.Title1 </h3>
-							<p class="c-banner__slogan">@Model.Description1</p>
-						</div>
-					</a>
-				</div>
-			}
-
-			@if (!string.IsNullOrEmpty(Model.BannerLink2) || !string.IsNullOrEmpty(Model.ImageUrl2) || !string.IsNullOrEmpty(Model.Title2) || !string.IsNullOrEmpty(Model.Description2))
-			{
-				<div class="swiper-slide c-swiper__slide">
-					<a href="@Model.BannerLink2" class="c-banner c-banner--trend c-banner--zoom">
-
-						<img src="@Model.ImageUrl2" class="c-banner__img" loading="lazy" alt="">
-
-						@{
-							var fontcolor2 = Model.IsBlackFont2 == true ? null : "c-banner__content--wt";
-						}
-
-						<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
-
-						<div class="c-banner__content @fontcolor2">
-							<h3 class="c-banner__title">@Model.Title2</h3>
-							<p class="c-banner__slogan">@Model.Description2</p>
-						</div>
-					</a>
-				</div>
-			}
-
-			@if (!string.IsNullOrEmpty(Model.BannerLink3) || !string.IsNullOrEmpty(Model.ImageUrl3) || !string.IsNullOrEmpty(Model.Title3) || !string.IsNullOrEmpty(Model.Description3))
-			{
-				<div class="swiper-slide c-swiper__slide">
-					<a href="@Model.BannerLink3" class="c-banner c-banner--trend c-banner--zoom">
-
-						<img src="@Model.ImageUrl3" class="c-banner__img" loading="lazy" alt="">
-
-						@{
-							var fontcolor3 = Model.IsBlackFont3 == true ? null : "c-banner__content--wt";
-						}
-						<div class="c-banner__content @fontcolor3">
-							<h3 class="c-banner__title">@Model.Title3 </h3>
-							<p class="c-banner__slogan">@Model.Description3</p>
-						</div>
-					</a>
-				</div>
-			}
+    <!-- .u-shadow-animation: hover時陰影特效 -->
+    <div class="swiper c-swiper c-swiper--trend u-shadow-animation" data-carousel="true">
+        <div class="swiper-wrapper c-swiper__wrapper">
+            @if (!string.IsNullOrEmpty(Model.BannerLink1) || !string.IsNullOrEmpty(Model.ImageUrl1) || !string.IsNullOrEmpty(Model.Title1) || !string.IsNullOrEmpty(Model.Description1))
+            {
+                var fontcolor1 = Model.IsBlackFont1 == true ? null : "c-banner__content--wt";
+                <div class="swiper-slide c-swiper__slide">
+                    <a href="@Model.BannerLink1" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget1">
+                        <img src="@Model.ImageUrl1" class="c-banner__img" loading="lazy" alt="">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                        <div class="c-banner__content @fontcolor1">
+                            <h3 class="c-banner__title">@Model.Title1 </h3>
+                            <p class="c-banner__slogan">@Model.Description1</p>
+                        </div>
+                    </a>
+                </div>
+            }
+            @if (!string.IsNullOrEmpty(Model.BannerLink2) || !string.IsNullOrEmpty(Model.ImageUrl2) || !string.IsNullOrEmpty(Model.Title2) || !string.IsNullOrEmpty(Model.Description2))
+            {
+                var fontcolor2 = Model.IsBlackFont2 == true ? null : "c-banner__content--wt";
+                <div class="swiper-slide c-swiper__slide">
+                    <a href="@Model.BannerLink2" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget2">
+                        <img src="@Model.ImageUrl2" class="c-banner__img" loading="lazy" alt="">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                        <div class="c-banner__content @fontcolor2">
+                            <h3 class="c-banner__title">@Model.Title2</h3>
+                            <p class="c-banner__slogan">@Model.Description2</p>
+                        </div>
+                    </a>
+                </div>
+            }
+            @if (!string.IsNullOrEmpty(Model.BannerLink3) || !string.IsNullOrEmpty(Model.ImageUrl3) || !string.IsNullOrEmpty(Model.Title3) || !string.IsNullOrEmpty(Model.Description3))
+            {
+                var fontcolor3 = Model.IsBlackFont3 == true ? null : "c-banner__content--wt";
+                <div class="swiper-slide c-swiper__slide">
+                    <a href="@Model.BannerLink3" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget3">
+                        <img src="@Model.ImageUrl3" class="c-banner__img" loading="lazy" alt="">
+                        <div class="c-banner__content @fontcolor3">
+                            <h3 class="c-banner__title">@Model.Title3 </h3>
+                            <p class="c-banner__slogan">@Model.Description3</p>
+                        </div>
+                    </a>
+                </div>
+            }
             @if (!string.IsNullOrEmpty(Model.BannerLink4) || !string.IsNullOrEmpty(Model.ImageUrl4) || !string.IsNullOrEmpty(Model.Title4) || !string.IsNullOrEmpty(Model.Description4))
             {
+                var fontcolor4 = Model.IsBlackFont4 == true ? null : "c-banner__content--wt";
                 <div class="swiper-slide c-swiper__slide">
-                    <a href="@Model.BannerLink4" class="c-banner c-banner--trend c-banner--zoom">
-
+                    <a href="@Model.BannerLink4" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget4">
                         <img src="@Model.ImageUrl4" class="c-banner__img" loading="lazy" alt="">
-
-                        @{
-                            var fontcolor4 = Model.IsBlackFont4 == true ? null : "c-banner__content--wt";
-                        }
                         <div class="c-banner__content @fontcolor4">
                             <h3 class="c-banner__title">@Model.Title4 </h3>
                             <p class="c-banner__slogan">@Model.Description4</p>
@@ -83,14 +60,10 @@
             }
             @if (!string.IsNullOrEmpty(Model.BannerLink5) || !string.IsNullOrEmpty(Model.ImageUrl5) || !string.IsNullOrEmpty(Model.Title5) || !string.IsNullOrEmpty(Model.Description5))
             {
+                var fontcolor5 = Model.IsBlackFont5 == true ? null : "c-banner__content--wt";
                 <div class="swiper-slide c-swiper__slide">
-                    <a href="@Model.BannerLink5" class="c-banner c-banner--trend c-banner--zoom">
-
+                    <a href="@Model.BannerLink5" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget5">
                         <img src="@Model.ImageUrl5" class="c-banner__img" loading="lazy" alt="">
-
-                        @{
-                            var fontcolor5 = Model.IsBlackFont5 == true ? null : "c-banner__content--wt";
-                        }
                         <div class="c-banner__content @fontcolor5">
                             <h3 class="c-banner__title">@Model.Title5 </h3>
                             <p class="c-banner__slogan">@Model.Description5</p>
@@ -100,14 +73,10 @@
             }
             @if (!string.IsNullOrEmpty(Model.BannerLink6) || !string.IsNullOrEmpty(Model.ImageUrl6) || !string.IsNullOrEmpty(Model.Title6) || !string.IsNullOrEmpty(Model.Description6))
             {
+                var fontcolor6 = Model.IsBlackFont6 == true ? null : "c-banner__content--wt";
                 <div class="swiper-slide c-swiper__slide">
-                    <a href="@Model.BannerLink6" class="c-banner c-banner--trend c-banner--zoom">
-
+                    <a href="@Model.BannerLink6" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget6">
                         <img src="@Model.ImageUrl6" class="c-banner__img" loading="lazy" alt="">
-
-                        @{
-                            var fontcolor6 = Model.IsBlackFont6 == true ? null : "c-banner__content--wt";
-                        }
                         <div class="c-banner__content @fontcolor6">
                             <h3 class="c-banner__title">@Model.Title6 </h3>
                             <p class="c-banner__slogan">@Model.Description6</p>
@@ -117,14 +86,10 @@
             }
             @if (!string.IsNullOrEmpty(Model.BannerLink7) || !string.IsNullOrEmpty(Model.ImageUrl7) || !string.IsNullOrEmpty(Model.Title7) || !string.IsNullOrEmpty(Model.Description7))
             {
+                var fontcolor7 = Model.IsBlackFont7 == true ? null : "c-banner__content--wt";
                 <div class="swiper-slide c-swiper__slide">
-                    <a href="@Model.BannerLink7" class="c-banner c-banner--trend c-banner--zoom">
-
+                    <a href="@Model.BannerLink7" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget7">
                         <img src="@Model.ImageUrl7" class="c-banner__img" loading="lazy" alt="">
-
-                        @{
-                            var fontcolor7 = Model.IsBlackFont7 == true ? null : "c-banner__content--wt";
-                        }
                         <div class="c-banner__content @fontcolor7">
                             <h3 class="c-banner__title">@Model.Title7 </h3>
                             <p class="c-banner__slogan">@Model.Description7</p>
@@ -134,14 +99,10 @@
             }
             @if (!string.IsNullOrEmpty(Model.BannerLink8) || !string.IsNullOrEmpty(Model.ImageUrl8) || !string.IsNullOrEmpty(Model.Title8) || !string.IsNullOrEmpty(Model.Description8))
             {
+                var fontcolor8 = Model.IsBlackFont8 == true ? null : "c-banner__content--wt";
                 <div class="swiper-slide c-swiper__slide">
-                    <a href="@Model.BannerLink8" class="c-banner c-banner--trend c-banner--zoom">
-
+                    <a href="@Model.BannerLink8" class="c-banner c-banner--trend c-banner--zoom" target="@Model.BannerTarget8">
                         <img src="@Model.ImageUrl8" class="c-banner__img" loading="lazy" alt="">
-
-                        @{
-                            var fontcolor8 = Model.IsBlackFont8 == true ? null : "c-banner__content--wt";
-                        }
                         <div class="c-banner__content @fontcolor8">
                             <h3 class="c-banner__title">@Model.Title8 </h3>
                             <p class="c-banner__slogan">@Model.Description8</p>
@@ -149,9 +110,9 @@
                     </a>
                 </div>
             }
-		</div>
-		<div class="swiper-button-next c-swiper__next"></div>
-		<div class="swiper-button-prev c-swiper__prev"></div>
-		<div class="swiper-pagination c-swiper__pagination"></div>
-	</div>
+        </div>
+        <div class="swiper-button-next c-swiper__next"></div>
+        <div class="swiper-button-prev c-swiper__prev"></div>
+        <div class="swiper-pagination c-swiper__pagination"></div>
+    </div>
 </div>
