--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
@@ -2,9 +2,6 @@
 @using Foundation.Wealth.Helper
 @using Feature.Wealth.Component.Models.Invest
 @using Sitecore.Configuration
-@{
-    var fcbLevel = Settings.GetSetting("FcbLevel");
-}
 <script>
     (function ($, window, document, undefined) {
         document.addEventListener('DOMContentLoaded', function () {
@@ -73,10 +70,7 @@
                             $('[eh-tracklist-info]', '#fundTable').interactive();
                             $('[eh-tracklist-focus]', '#fundTable').off('click.interactive');
                             $('[eh-tracklist-info]', '#fundTable').off('click.interactive');
-                            let level = '@fcbLevel';
-                            if (level !== "2") {
-                                $('[data-fcblevel]').addClass('u-hidden');
-                            }
+
                         }
                     },
                     order: {
@@ -273,10 +267,6 @@
                             $('[eh-tracklist-info]', '#etfTable').interactive();
                             $('[eh-tracklist-focus]', '#etfTable').off('click.interactive');
                             $('[eh-tracklist-info]', '#etfTable').off('click.interactive');
-                            let level = '@fcbLevel';
-                            if (level !== "2") {
-                                $('[data-fcblevel]').addClass('u-hidden');
-                            }
                         }
                     },
                     order: {
@@ -474,11 +464,6 @@
                             $('[eh-tracklist-info]', '#foreignStockTable').interactive();
                             $('[eh-tracklist-focus]', '#foreignStockTable').off('click.interactive');
                             $('[eh-tracklist-info]', '#foreignStockTable').off('click.interactive');
-
-                            let level = '@fcbLevel';
-                            if (level !== "2") {
-                                $('[data-fcblevel]').addClass('u-hidden');
-                            }
                         }
                     },
                     order: {
@@ -670,7 +655,6 @@
                 let self = e.target;
                 let cancelId = self.getAttribute('data-cancel-id');
                 let cancelType = self.getAttribute('data-cancel-type');
-
                 let obj = new CompareObj(cancelId, cancelType);
                 removeItem('focus', obj);
                 $.ajax({
@@ -679,9 +663,17 @@
                     data: { "trackList": store.get("focus") || [], "productId": cancelId},
                     beforeSend: function () { $('.c-loading').loading('show'); },
                     success: function (msg) {
+                        switch (cancelType.toLowerCase()) {
+                            case "fund":
                                 resetTable();
+                                break;
+                            case "etf":
                                 resetTable2();
-                                resetTable3();                      
+                                break;
+                            case "foreignstocks":
+                                resetTable3();
+                                break;
+                        }
                     },
                     error: function (msg) {
                         //設置成功
@@ -848,15 +840,7 @@
                 });
             })
             // #endregion 共用
-            //第二階段tab hide
-            let level = '@fcbLevel';
-            if (level !== "2") {
-                $('.c-tab__navs').first().children().each(function (index) {
-                    if (index > 0) {
-                        $(this).addClass('u-hidden');
-                    }
-                });
-            }
+
         });
     })(jQuery, window, document);
 </script>
